<resources>
    <string name="app_name">Helping Hands</string>
    <string name="sign_in">SIGN IN </string>
    <string name="sign_out">Sign Out</string>
    <string name="donate">Donate</string>
    <string name="profile">Profile</string>
    <string name="news">NEWS</string>
    <string name="stories">STORIES</string>
    <string name="donors">DONORS</string>
    <string name="facebook_app_id">238971809879938</string>
    <string name="fb_login_protocol_scheme">fb238971809879938</string>
    <string name="facebook_provider_id">facebook_provider_id</string>
    <string name="developer_info">Created By Madhu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="assistance">Immediate Assistance</string>
    <string name="invite">Invite</string>
    <string name="continue_payment">continue</string>
    <string name="share">Share</string>
    <string name="share_body">Clear this and enter the text you want to</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="please_enter_amount">Please enter a valid amount</string>
    <string name="amount_cannot_be_empty">Amount cannot be empty</string>
    <string name="payment_hint">Enter amount</string>
    <string name="videos">Videos</string>
    <string name="video_title_logo">NATIONAL GEOGRAPHIC</string>
    <string name="video_btn_skip_intro">Skip Intro</string>
    <string name="video_error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="getLocation">Get Location</string>

    <string-array name="amount_array">
        <item>Select amount</item>
        <item>20</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
    </string-array>

</resources>
