<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/assistance"
            android:icon="@drawable/login_logo"
            android:title="@string/assistance" />
        <item
            android:id="@+id/experiment"
            android:icon="@drawable/login_logo"
            android:title="@string/getLocation" />
        <item
            android:id="@+id/videos"
            android:icon="@drawable/login_logo"
            android:title="@string/videos" />
        <item
            android:id="@+id/donate"
            android:icon="@drawable/donate"
            android:title="@string/donate" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/invite"
            android:title="@string/share" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/login_logo"
            android:title="@string/logout" />

    </group>

</menu>
